--- a/vesl00_4IT449_semestralka/App.config
+++ b/vesl00_4IT449_semestralka/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <startup>
@@ -17,4 +17,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="HighscoreEntities" connectionString="metadata=res://*/Models.HighscoreModel.csdl|res://*/Models.HighscoreModel.ssdl|res://*/Models.HighscoreModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=blockbreaker.database.windows.net;initial catalog=blockbreaker;persist security info=True;user id=blockbreaker;password=Breaker1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
