--- a/vesl00_4IT449_semestralka/vesl00_4IT449_semestralka.csproj
+++ b/vesl00_4IT449_semestralka/vesl00_4IT449_semestralka.csproj
@@ -134,9 +134,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
